# p2p-chat

./: .gitignore  Cargo.toml  README.md  deny.toml
crates/p2pchat-core/: Cargo.toml
crates/p2pchat-core/src/: crypto.rs  identity.rs  lib.rs  message.rs  ratchet.rs  session.rs  storage.rs  transport.rs
crates/p2pchat-gui/: Cargo.toml
crates/p2pchat-gui/src/: gui.rs  main.rs
scripts/: build.sh  check.sh  install.sh  p2pchat.desktop  p2pchat.nsi  uninstall.sh
