[workspace]
resolver = "2"
members = [
    "crates/p2pchat-core",
    "crates/p2pchat-gui",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
rust-version = "1.85"

[workspace.dependencies]
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
thiserror = "2"
tokio = { version = "1", features = ["rt-multi-thread", "net", "macros", "sync", "time", "io-util"] }
futures-util = "0.3"
n0-future = "0.3"

# Identity
ed25519-dalek = { version = "2", features = ["rand_core"] }
rand_core = "0.6"
argon2 = "0.5"
chacha20poly1305 = "0.10"
sha2 = "0.10"
hex = "0.4"
zeroize = { version = "1", features = ["zeroize_derive"] }
secrecy = "0.8"

# Transport
iroh = "1.0.0-rc.1"

# CLI (gui only)
rpassword = "7"
qrcode = "0.14"
