[package]
name = "p2pchat-core"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Core library for p2p-chat: identity, transport, crypto, storage."

[dependencies]
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
futures-util = { workspace = true }
ed25519-dalek = { workspace = true }
rand_core = { workspace = true }
argon2 = { workspace = true }
chacha20poly1305 = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
zeroize = { workspace = true }
secrecy = { workspace = true }
iroh = { workspace = true }

# Message protocol
postcard = { workspace = true }
bytes = { workspace = true }

# Crypto: Noise XX handshake
snow = { workspace = true }

# Double Ratchet
hkdf = { workspace = true }
x25519-dalek = { workspace = true }
hmac = { workspace = true }

# Storage
sqlx = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }

# CLI UI
rpassword = { workspace = true }

# Cross-platform paths
dirs = { workspace = true }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
